--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@500;700&display=swap"      rel="stylesheet">]
     <link rel="stylesheet" href="./Rootlinks.css">
 </head>
-    <body class="red">
+    <body class="blue">
         <div class="container">
           <img class=profile src="https://github.com/delonnnnnn.png" 
           alt="Imagem do perfil">
