--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
 
           <ul>
           <li>
-              <a href="https://api.whatsapp.com/send?1=pt_BR&phone=5583996240814&text=Olá, é um     prazer!."> 📲 Whatsapp</a>
+              <a href="https://api.whatsapp.com/send?1=pt_BR&phone=5583996240814&text=Olá Allan, é um prazer!." target="_blank"> 📲 Whatsapp</a>
           </li>
           <li>
-              <a href="https://www.facebook.com/allan.d23/"> 📘 Facebook</a>
+              <a href="https://www.facebook.com/allan.d23/" target="_blank"> 📘 Facebook</a>
           </li>
           <li>
-              <a href="https://www.linkedin.com/in/allandelon/"> 💼 Linkedin</a>
+              <a href="https://www.linkedin.com/in/allandelon/" target="_blank"> 💼 Linkedin</a>
           </li>
           <li>
-              <a href="https://www.instagram.com/delonnnnnn"> 📷 Instagram</a>
+              <a href="https://www.instagram.com/delonnnnnn" target="_blank"> 📷 Instagram</a>
           </li>
           <li>
-              <a href="https://github.com/delonnnnnn"> 🐱 Github</a>
+              <a href="https://github.com/delonnnnnn" target="_blank"> 🐱 Github</a>
           </li>
           </ul>
           <footer>Feito com 💗 por Allan D.</footer>
